--- a/spek-core/build.gradle
+++ b/spek-core/build.gradle
@@ -1,3 +1,6 @@
+apply from: "$rootDir/gradle/common/dependencies.gradle"
+apply from: "$rootDir/gradle/common/kotlin.gradle"
+
 description = 'Spek Core'
 
 dependencies {
