--- a/spek-junit-engine/build.gradle
+++ b/spek-junit-engine/build.gradle
@@ -1,9 +1,9 @@
 apply from: "$rootDir/gradle/common/dependencies.gradle"
 apply from: "$rootDir/gradle/common/kotlin.gradle"
 
-description = 'Spek Samples'
-
 dependencies {
     compile project(':spek-api')
-    compile "org.jetbrains.kotlin:kotlin-test"
+    compile 'org.jetbrains.kotlin:kotlin-stdlib'
+    compile 'org.jetbrains.kotlin:kotlin-reflect'
+    compileOnly 'org.junit:junit-engine-api'
 }
